--- a/Apprentissage Python - Notebook - Markdown.ipynb
+++ b/Apprentissage Python - Notebook - Markdown.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "* Cours :\n",
     "  * [OpenClassRooms - base du Python](https://openclassrooms.com/fr/courses/4262331-demarrez-votre-projet-avec-python)\n",
+    "  * [FormationVidéo - playlist YouTube](https://www.youtube.com/watch?v=HWxBtxPBCAc&list=PLrSOXFDHBtfHg8fWBd7sKPxEmahwyVBkC)\n",
     "  * [OpenClassRooms - librairies Data Science](https://openclassrooms.com/fr/courses/4452741-decouvrez-les-librairies-python-pour-la-data-science)\n",
     "\n",
     "\n",
@@ -23,6 +24,7 @@
     "    * [les listes](#listes)\n",
     "    * [les dictionnaires](#dictionnaires)\n",
     "    * [import](#import)\n",
+    "    * [try / except](#tryexcept)\n",
     "    * [les classes](#classes)\n",
     "  * [librairies Data Science](#libdatascience)"
    ]
@@ -207,7 +209,7 @@
    "source": [
     "### les fonctions\n",
     "\n",
-    "/!\\ Attention aux : qui démarre la fonction et aux 2 sauts de ligne qui marquent la fin /!\\"
+    "/!\\ Attention à def et aux : qui démarre la fonction et aux 2 sauts de ligne qui marquent la fin /!\\"
    ]
   },
   {
@@ -532,7 +534,6 @@
     "dictionnaire[\"liste\"].append(\"test\")\n",
     "print(dictionnaire[\"liste\"])\n",
     "\n",
-    "\n",
     "dictionnaire.update({\"liste\": [\"euh\", \"test\"], \"dico\": \"test\"})\n",
     "print(dictionnaire)"
    ]
@@ -548,16 +549,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### import"
+    "### import\n",
+    "\n",
+    "Importer un module afin de ne pas avoir à recoder soi-même tout un tas de fonctionnalités\n",
+    "\n",
+    "Deux méthodes d'import :\n",
+    "1. (conseillée) import module as name\n",
+    "  * permet d'importer le module sous le nom name\n",
+    "  * on utilise ensuite les méthodes du module : name.method(param)\n",
+    "2. (déconseillée) from module import * ou some_object\n",
+    "  * permet aussi d'importer un module mais sans avoir à l'appeler pour utiliser ses méthodes\n",
+    "  * on peut directement utiliser : method()\n",
+    "  * /!\\ attention cependant car si plusieurs modules sont importés de cette manière et qu'ils partagent le même nom de méthode, il y aura un conflit /!\\\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from numpy import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"tryexcept\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### try / except"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La variable prenom n'est pas définie\n",
+      "Je m'appelle : Marcel\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print(\"Je m'appelle : {}\".format(prenom))\n",
+    "except NameError:\n",
+    "    print(\"La variable prenom n'est pas définie\")\n",
+    "    \n",
+    "prenom = \"Marcel\"\n",
+    "\n",
+    "try:\n",
+    "    print(\"Je m'appelle : {}\".format(prenom))\n",
+    "except NameError:\n",
+    "    print(\"La variable prenom n'est pas définie\")"
    ]
   },
   {
@@ -571,15 +626,229 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### les classes"
+    "### les classes / programmation orienté objet\n",
+    "\n",
+    "* Classe: plan de conception / nouveau type d'objet (ex : Humain)\n",
+    "* Objet: instance d'une classe (ex: Julien est un objet de classe Humain)\n",
+    "* Attribut: variable d'une classe (ex : prénom, âge, sexe, taille, poids,...)\n",
+    "* Propriété: manière de manipuler/contrôler des attributs (encapsulation)\n",
+    "\n",
+    "> plutôt que d'accéder/modifier/supprimer directement un attribut on peut les encapsuler dans des propriétés\n",
+    "\n",
+    "> l'idée étant de contrôler correctement les attributs \n",
+    "\n",
+    ">> ex: empêcher qu'une valeur négative ne soit définie et mettre par défaut 0 dans ce cas\n",
+    "\n",
+    ">> ex: vérifier qu'un utilisateur envoie bien un numéro de tél et pas une chaîne de caractère\n",
+    "\n",
+    ">> ex: vérifier le nombre max de caractères permis pour un attribut donné\n",
+    "\n",
+    "> par convention on déclare un attribut \\_attribut avec un \\_ pour signaler que l'on ne veut pas y accéder directement mais via des propriétés (bien qu'on pourrait toujours le faire si on le souhaitait)\n",
+    "\n",
+    "> une propriété peut avoir 4 paramètres (<getter\\>, <setter\\>, <deleter\\>, <helper\\>)\n",
+    " \n",
+    ">> si le <getter\\> ne fait qu'un \"return self.var\"il ne sert à rien ! \n",
+    "\n",
+    ">> ces paramètres sont à définir si on joue de manière particulière avec l'attribut qu'on encapsule\n",
+    "\n",
+    "* Méthode d'instance: fonction sur une instance (objet)\n",
+    "* Méthode de classe: fonction sur une classe\n",
+    "* Méthode statique: fonction indépendante mais \"liée\" à une classe\n",
+    "\n",
+    "> méthode spéciale : le constructeur : def \\_\\_init\\_\\_(self):\n",
+    "\n",
+    "> en Python, pas la peine de faire des accesseurs comme en C++ (getAge, setAge...) on peut directement modifier les attributs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lancement du programme...\n",
+      "\n",
+      "Création d'un humain...\n",
+      "Humain créé !\n",
+      "Prénom de humain1 : Julien\n",
+      "Sexe de humain1 : H\n",
+      "Age de humain1 : 30\n",
+      "Taille de humain1 : 1.83\n",
+      "\n",
+      "Age de humain1 : 60\n",
+      "\n",
+      "Poids de humain1 : 70.2 kgs\n",
+      "\n",
+      "Nouveau poids de humain1 : 90.8 kgs\n",
+      "Nouveau poids de humain1 : 90.8 kgs\n",
+      "\n",
+      ">>>>> deleter <<<<<<\n",
+      "Impossible d'afficher un poids car l'humain1 n'en a pas\n",
+      "Nouveau poids de humain1 : 60.8 kgs\n",
+      "\n",
+      "Help on property:\n",
+      "\n",
+      "    Je suis le poids d'un humain\n",
+      "\n",
+      "Humains existants : 1\n",
+      "Création d'un humain...\n",
+      "Humain créé !\n",
+      "Humains existants : 2\n",
+      "\n",
+      "Julien a dit : hello world\n",
+      "Martine a dit : oh hello l'ami\n",
+      "Julien a dit : ça va ?\n",
+      "Martine a dit : pépouze, j'apprends les classes\n",
+      "\n",
+      "Ville actuelle des humains : Paris\n",
+      "Nouvelle ville des humains : Lyon\n",
+      "\n",
+      "un être humain est un habitant de la planète Terre et il possède une conscience de lui-même\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Humain:\n",
+    "    \"\"\"\n",
+    "    classe des êtres humains\n",
+    "    \"\"\"\n",
+    "    # attribut de classe / variable globale partagée entre toutes les instances de la classe\n",
+    "    humains_crees = 0\n",
+    "    lieu_habitation = \"Paris\"\n",
+    "    \n",
+    "    # constructeur\n",
+    "    def __init__(self, prenom, sexe, age, taille, poids):\n",
+    "        print(\"Création d'un humain...\")\n",
+    "        #attribut d'objet\n",
+    "        self.prenom = prenom\n",
+    "        self.sexe = sexe\n",
+    "        self.age = age\n",
+    "        self.taille = taille\n",
+    "        # attribut à encapsuler\n",
+    "        self._poids = poids\n",
+    "        Humain.humains_crees += 1\n",
+    "        print(\"Humain créé !\")\n",
+    "    \n",
+    "    # <getter>\n",
+    "    # puisqu'il est possible de supprimer l'attribut poids on va vérifier qu'il exsite avant de le retourner\n",
+    "    def _getPoids(self):\n",
+    "        # on pourrait imaginer un if self.pays == \"USA\" alors on convertit en pounds\n",
+    "        try:\n",
+    "            return str(self._poids) + \" kgs\"\n",
+    "        except AttributeError:\n",
+    "            return \"poids_non_defini\"\n",
+    "    \n",
+    "    # <setter>\n",
+    "    # dans cet exemple l'humain ne peut faire que grossir\n",
+    "    def _setPoids(self, poids):\n",
+    "        try:\n",
+    "            if poids > self._poids:\n",
+    "                self._poids = poids\n",
+    "        except AttributeError:\n",
+    "                self._poids = poids\n",
+    "        \n",
+    "    # <deleter>\n",
+    "    def _delPoids(self):\n",
+    "        del self._poids\n",
+    "       \n",
+    "    # propriété / encapsulation\n",
+    "    # 4 paramètres (non obligatoire) pour property (<getter>, <setter>, <deleter>, <helper>)\n",
+    "    poids = property(_getPoids, _setPoids, _delPoids, \"Je suis le poids d'un humain\")\n",
+    "\n",
+    "    # méthode d'instance\n",
+    "    # ce n'est pas une méthode de classe car la méthode agit sur self\n",
+    "    # si je ne crée pas d'objet humain1 = Humain(...), je ne peux pas utiliser la méthode\n",
+    "    def parler(self,parole):\n",
+    "        print(\"{} a dit : {}\".format(self.prenom, parole))\n",
+    "         \n",
+    "    # méthode de classe\n",
+    "    # je peux utiliser la méthode sans créer d'êtres humains\n",
+    "    def changerVille(cls, ville):\n",
+    "        Humain.lieu_habitation = ville\n",
+    "    changerVille = classmethod(changerVille)\n",
+    "    \n",
+    "    # méthode statique\n",
+    "    # classe utilitaire que l'on peut appeler un peu n'importe comment\n",
+    "    def kesakoUnHumain():\n",
+    "        print(\"un être humain est un habitant de la planète Terre et il possède une conscience de lui-même\")\n",
+    "    kesakoUnHumain = staticmethod(kesakoUnHumain)\n",
+    "\n",
+    "\n",
+    "print(\"Lancement du programme...\")\n",
+    "print()\n",
+    "\n",
+    "# nouvelle instance de la classe Humain\n",
+    "humain1 = Humain(\"Julien\", \"H\", 30, 1.83, 70.2)\n",
+    "\n",
+    "# pas besoin d'accesseur pour lire l'instance\n",
+    "print(\"Prénom de humain1 : {}\".format(humain1.prenom))\n",
+    "print(\"Sexe de humain1 : {}\".format(humain1.sexe))\n",
+    "print(\"Age de humain1 : {}\".format(humain1.age))\n",
+    "print(\"Taille de humain1 : {}\".format(humain1.taille))\n",
+    "print()\n",
+    "\n",
+    "# pas besoin d'accesseur pour modifier l'attribut\n",
+    "humain1.age = 60 \n",
+    "print(\"Age de humain1 : {}\".format(humain1.age))\n",
+    "print()\n",
+    "\n",
+    "# utilisation du getter _getPoids()\n",
+    "print(\"Poids de humain1 : {}\".format(humain1.poids))\n",
+    "print()\n",
+    "\n",
+    "# utilisation du setter _setPoids(poids) de la propriété poids\n",
+    "humain1._setPoids(90.8)\n",
+    "print(\"Nouveau poids de humain1 : {}\".format(humain1.poids))\n",
+    "humain1._setPoids(60.8)\n",
+    "print(\"Nouveau poids de humain1 : {}\".format(humain1.poids))\n",
+    "print()\n",
+    "\n",
+    "# utilisation du deleter _delPoids()\n",
+    "print(\">>>>> deleter <<<<<<\")\n",
+    "\n",
+    "## humain1._delPoids() # on peut appeler la méthode que l'on a créée\n",
+    "del(humain1.poids)     # ou la méthode del qui va utiliser notre méthode _delPoids()\n",
+    "\n",
+    "if humain1.poids != \"poids_non_defini\":\n",
+    "    print(\"Poids de humain1 : {}\".format(humain1.poids))\n",
+    "else:\n",
+    "    print(\"Impossible d'afficher un poids car l'humain1 n'en a pas\")\n",
+    "    \n",
+    "humain1._setPoids(60.8)\n",
+    "print(\"Nouveau poids de humain1 : {}\".format(humain1.poids))\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "# utilisation du helper\n",
+    "help(Humain.poids)\n",
+    "\n",
+    "# affichage et évolution de la variable globale humains_crees\n",
+    "print(\"Humains existants : {}\".format(Humain.humains_crees))\n",
+    "humain2 = Humain(\"Martine\", \"F\", 45, 1.64, 60)\n",
+    "print(\"Humains existants : {}\".format(Humain.humains_crees))\n",
+    "print()\n",
+    "\n",
+    "# utilisation de la méthode d'instance parler(parole)\n",
+    "humain1.parler(\"hello world\")\n",
+    "humain2.parler(\"oh hello l'ami\")\n",
+    "humain1.parler(\"ça va ?\")\n",
+    "humain2.parler(\"pépouze, j'apprends les classes\")\n",
+    "print()\n",
+    "\n",
+    "# utilisation de la méthode de classe changerVille(ville)\n",
+    "print(\"Ville actuelle des humains : {}\".format(Humain.lieu_habitation))\n",
+    "Humain.changerVille(\"Lyon\")\n",
+    "print(\"Nouvelle ville des humains : {}\".format(Humain.lieu_habitation))\n",
+    "print()\n",
+    "\n",
+    "# utilisation de la méthode statique kesakoUnHumain()\n",
+    "Humain.kesakoUnHumain()\n",
+    "\n",
+    "# propriétés\n"
+   ]
   },
   {
    "cell_type": "markdown",
