--- a/0.1. - Apprentissage - Python 3.X.ipynb
+++ b/0.1. - Apprentissage - Python 3.X.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "* [OpenClassRooms - base du Python](https://openclassrooms.com/fr/courses/4262331-demarrez-votre-projet-avec-python)\n",
     "* [FormationVidéo - playlist YouTube](https://www.youtube.com/watch?v=HWxBtxPBCAc&list=PLrSOXFDHBtfHg8fWBd7sKPxEmahwyVBkC)\n",
-    "* [Documentation - Opérateur surchargeable](https://docs.python.org/3.8/library/operator.html)"
+    "* [Documentation - Opérateur surchargeable](https://docs.python.org/3.8/library/operator.html)\n",
+    "* [YouTube - Tips & Tricks](https://www.youtube.com/watch?v=C-gEQdGVXbk)"
    ]
   },
   {
@@ -32,7 +33,8 @@
     "* [if '\\_\\_name\\_\\_' == '\\_\\_main\\_\\_'](#namemain)\n",
     "* [module enum](#enum)\n",
     "* [raccourcis d'écriture](#raccourcisecriture)\n",
-    "* [lambda](#lambda)"
+    "* [lambda](#lambda)\n",
+    "* [tips & tricks](#tipstricks)"
    ]
   },
   {
@@ -1077,7 +1079,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1106,6 +1110,327 @@
     "\n",
     "plt.plot(domaine, y)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"tipstricks\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tips & Tricks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1 - x if conditon else y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "condition = False\n",
+    "if condition:\n",
+    "    x=1\n",
+    "else:\n",
+    "    x=0    \n",
+    "print(x)\n",
+    "\n",
+    "condition = True\n",
+    "x = 1 if condition else 0\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2 - numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11000000\n",
+      "11000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 10000000\n",
+    "num2 = 1000000\n",
+    "\n",
+    "total = num1 + num2\n",
+    "print(total)\n",
+    "\n",
+    "num3 = 10_000_000\n",
+    "num4 = 1_000_000\n",
+    "\n",
+    "total2 = num3 + num4\n",
+    "print(total2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3 - enumerate / zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Pierre\n",
+      "1 Paul\n",
+      "2 Jacques\n",
+      "3 David\n",
+      "4 Michael\n",
+      "\n",
+      "1 - Pierre\n",
+      "2 - Paul\n",
+      "3 - Jacques\n",
+      "4 - David\n",
+      "5 - Michael\n",
+      "\n",
+      "0 - Pierre - Deglingo\n",
+      "1 - Paul - PetitsPieds\n",
+      "2 - Jacques - La Farce\n",
+      "3 - David - El Caid\n",
+      "4 - Michael - ZOom\n",
+      "\n",
+      "Pierre - Deglingo\n",
+      "Paul - PetitsPieds\n",
+      "Jacques - La Farce\n",
+      "David - El Caid\n",
+      "Michael - ZOom\n",
+      "\n",
+      "('Pierre', 'Deglingo')\n",
+      "('Paul', 'PetitsPieds')\n",
+      "('Jacques', 'La Farce')\n",
+      "('David', 'El Caid')\n",
+      "('Michael', 'ZOom')\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Pierre','Paul','Jacques','David','Michael']\n",
+    "\n",
+    "index = 0\n",
+    "for name in names:\n",
+    "    print(index, name)\n",
+    "    index +=1\n",
+    "\n",
+    "print()\n",
+    "for index, name in enumerate(names, start=1):\n",
+    "    print(index, \"-\", name)\n",
+    "    \n",
+    "print()\n",
+    "surnoms = ['Deglingo','PetitsPieds','La Farce','El Caid','ZOom']\n",
+    "for index, name in enumerate(names):\n",
+    "    surnom = surnoms[index]\n",
+    "    print(index, \"-\" , name, \"-\", surnom)\n",
+    "\n",
+    "print()\n",
+    "for name, surnom in zip(names, surnoms):\n",
+    "    print(name, \"-\", surnom)\n",
+    "    \n",
+    "print()\n",
+    "for value in zip(names, surnoms):\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4 - Unpacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "a: 1\n",
+      "b: 2\n",
+      "\n",
+      "a: 1\n",
+      "\n",
+      "a: 1\n",
+      "b: 2\n",
+      "c: [3, 4, 5]\n",
+      "\n",
+      "a: 1\n",
+      "b: 2\n",
+      "c: [3, 4, 5, 6]\n",
+      "d: 7\n",
+      "\n",
+      "a: 1\n",
+      "b: 2\n",
+      "d: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print()\n",
+    "a, b = (1,2)\n",
+    "print(\"a:\",a)\n",
+    "print(\"b:\",b)\n",
+    "\n",
+    "print()\n",
+    "a, _ = (1,2) # _ signifie qu'on ne va pas utiliser cette variable, ça évite une erreur de l'intépreteur\n",
+    "print(\"a:\",a)\n",
+    "#print(\"b:\",b)\n",
+    "\n",
+    "\"\"\"\n",
+    "print()\n",
+    "a, b, c = (1,2,3,4,5) # too many values to unpack\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "\"\"\"\n",
+    "\n",
+    "print()\n",
+    "a, b, *c = (1,2,3,4,5) # * signifie tout ce qui reste\n",
+    "print(\"a:\",a)\n",
+    "print(\"b:\",b)\n",
+    "print(\"c:\",c)\n",
+    "\n",
+    "\n",
+    "print()\n",
+    "a, b, *c, d = [1,2,3,4,5,6,7] # * signifie tout ce qui reste tant qu'une autre variable n'est pas renseignée\n",
+    "print(\"a:\",a)\n",
+    "print(\"b:\",b)\n",
+    "print(\"c:\",c)\n",
+    "print(\"d:\",d)\n",
+    "\n",
+    "print()\n",
+    "a, b, *_, d = [1,2,3,4,5,6,7] # * signifie tout ce qui reste tant qu'une autre variable n'est pas renseignée\n",
+    "print(\"a:\",a)\n",
+    "print(\"b:\",b)\n",
+    "print(\"d:\",d)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5 - setattr / getattr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Séb\n",
+      "Ramos\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person():\n",
+    "    pass\n",
+    "\n",
+    "person = Person()\n",
+    "\n",
+    "person.firstname=\"Séb\"\n",
+    "person.lastname=\"Ramos\"\n",
+    "\n",
+    "print(person.firstname)\n",
+    "print(person.lastname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Séb\n",
+      "Ramos\n",
+      "\n",
+      "Séb\n",
+      "Ramos\n",
+      "\n",
+      "Jenny\n",
+      "Beck\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person():\n",
+    "    pass\n",
+    "\n",
+    "person = Person()\n",
+    "\n",
+    "firstname_key = 'first'\n",
+    "firstname_value = 'Séb'\n",
+    "lastname_key = 'second'\n",
+    "lastname_value = 'Ramos'\n",
+    "\n",
+    "setattr(person, firstname_key, firstname_value)\n",
+    "setattr(person, lastname_key, lastname_value)\n",
+    "print(person.first)\n",
+    "print(person.second)\n",
+    "\n",
+    "print()\n",
+    "firstname = getattr(person, firstname_key)\n",
+    "lastname = getattr(person, lastname_key)\n",
+    "print(firstname)\n",
+    "print(lastname)\n",
+    "\n",
+    "print()\n",
+    "person_info = {'firstname': 'Jenny', 'lastname':'Beck'}\n",
+    "person2 = Person()\n",
+    "for key, value in person_info.items():\n",
+    "    setattr(person2, key, value)\n",
+    "    \n",
+    "for key in person_info.keys():\n",
+    "    print(getattr(person2, key))\n"
    ]
   }
  ],
