--- a/P2_ramos_sebastian/P2_ramos_sebastian.ipynb
+++ b/P2_ramos_sebastian/P2_ramos_sebastian.ipynb
@@ -1,24 +1,48 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 0. - Sommaire\n",
+    "---\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. - Récupérer & charger les données"
+    "1. Récupérer & charger les données\n",
+    "  1. Récupérer le jeu de données\n",
+    "  2. Charger les données dans le Notebook\n",
+    "  \n",
+    ">\n",
+    "\n",
+    "2. Nettoyer & consolider\n",
+    "  - Analyse rapide du fichier\n",
+    "  \n",
+    "  >\n",
+    "  \n",
+    "  - Suppression des données trop incomplètes\n",
+    "  - Suppression des données inutiles pour l'analyse\n",
+    "    - Suppression des colonnes toujours uniques / identiques (ou quasi)\n",
+    "    - Suppression des colonnes correspondants à une autre\n",
+    "    3. Suppression des données trop peu representées\n",
+    "    4. Suppression des données anormales\n",
+    "  4. Compléter les données manquantes\n",
+    "    1. Complétion de la colonne ESPECE\n",
+    "    2. Complétion de la colonne STADE DE DEVELOPPEMENT\n",
+    "  5. Revérification suite à la complétion des données "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. - Récupérer & charger les données\n",
+    "---\n",
+    "---"
    ]
   },
   {
@@ -26,6 +50,7 @@
    "metadata": {},
    "source": [
     "## 1.1. - Récupérer le jeu de données\n",
+    "---\n",
     "\n",
     "[Lien officiel de la Mairie de Paris pour exporter le jeu de données - les arbres](https://opendata.paris.fr/explore/dataset/les-arbres/export/)"
    ]
@@ -34,7 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2. - Charger les données dans le Notebook"
+    "## 1.2. - Charger les données dans le Notebook\n",
+    "---"
    ]
   },
   {
@@ -237,6 +263,7 @@
     "\n",
     "# lecture du fichier les-arbres.csv pour le charger en tant que DataFrame\n",
     "data = pd.read_csv('les-arbres.csv', sep=';')\n",
+    "data_save = data\n",
     "\n",
     "# affichage des 5 premières lignes du fichier\n",
     "data.head(5)"
@@ -246,14 +273,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. - Nettoyer & consolider"
+    "# 2. - Nettoyer & consolider\n",
+    "---\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1. - Analyse rapide du fichier"
+    "## 2.1. - Analyse rapide du fichier\n",
+    "---"
    ]
   },
   {
@@ -284,7 +314,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2. - Suppression des données trop incomplètes"
+    "## 2.2. - Suppression des données trop incomplètes\n",
+    "---"
    ]
   },
   {
@@ -346,7 +377,8 @@
     "* À noter que certaines colonnes ne sont que partiellement incomplètes :\n",
     "  * **ESPECE** est complète à **99%**\n",
     "  * **STADE DE DEVELOPPEMENT** est complète à **72%**\n",
-    "  * **REMARQUABLE** est complète à **82%**"
+    "  * **REMARQUABLE** est complète à **82%**\n",
+    "* Une analyse plus poussée est à faire sur ces colonnes (voir plus bas)"
    ]
   },
   {
@@ -380,12 +412,16 @@
    "metadata": {},
    "source": [
     "## 2.3. - Suppression des données inutiles pour l'analyse\n",
+    "---\n",
     "\n",
     "**Une colonne peut être jugée inutile si :**\n",
     "* l'ensemble de ses valeurs sont toujours uniques (hors coordonnées GPS)\n",
     "* l'ensemble de ses valeurs sont toujours identiques ou quasiment identiques\n",
+    "* l'ensemble de ses valeurs, bien que différentes, correspondent valeur par valeur à une autre colonne (lien 1-1)\n",
     "\n",
-    "**Une donnée peut être jugée anormale si :**\n",
+    "**Une donnée peut être jugée inutile si :**\n",
+    "* elle est trop peu représentée pour avoir un réel impact sur l'analyse\n",
+    "  * ex : la domanialité DASES ne concerne que 11 lignes du fichier\n",
     "* par rapport à l'ensemble des données du même type, sa valeur est radicalement différente sans raison apparente\n",
     "  * ex : une hauteur de 10 000 mètres pour un arbre n'est pas crédible"
    ]
@@ -394,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.1. - Suppression des colonnes toujours uniques"
+    "> ### 2.3.1. - Suppression des colonnes toujours uniques / identiques (ou quasi)"
    ]
   },
   {
@@ -491,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.1.1. - Analyse plus poussée - IDEMPLACEMENT"
+    ">> #### 2.3.1.1. - Analyse plus poussée - IDEMPLACEMENT"
    ]
   },
   {
@@ -607,8 +643,7 @@
     "idcut = pd.cut(data['IDEMPLACEMENT'].value_counts(normalize=True),np.arange(0.001,0.009,0.0005))\n",
     "print(\">>> zoom 4  : la plupart des identifiants sont en doublons + de\", int(round(0.001*len(data),0)), \"fois (0.01%)\")\n",
     "print(idcut.value_counts().sort_index())\n",
-    "print()\n",
-    "\n"
+    "print()"
    ]
   },
   {
@@ -624,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.1.2. - Analyse plus poussée - STADE DE DEVELOPPEMENT"
+    ">> #### 2.3.1.2. - Analyse plus poussée - STADE DE DEVELOPPEMENT"
    ]
   },
   {
@@ -694,7 +729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.1.3. - Analyse plus poussée - REMARQUABLE"
+    ">> #### 2.3.1.3. - Analyse plus poussée - REMARQUABLE"
    ]
   },
   {
@@ -783,12 +818,141 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.2. - Suppression des colonnes toujours identiques ou quasiment identiques"
+    "> ### 2.3.2. - Suppression des colonnes correspondants à une autre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> nombre d'index distincts par colonne :\n",
+      "\n",
+      "DOMANIALITE : ( 9 )\n",
+      "ARRONDISSEMENT : ( 25 )\n",
+      "LIEU / ADRESSE : ( 7147 )\n",
+      "IDEMPLACEMENT : ( 70426 )\n",
+      "LIBELLE FRANCAIS : ( 192 )\n",
+      "GENRE : ( 175 )\n",
+      "ESPECE : ( 540 )\n",
+      "CIRCONFERENCE (cm) : ( 510 )\n",
+      "HAUTEUR (m) : ( 147 )\n",
+      "STADE DE DEVELOPPEMENT : ( 4 )\n",
+      "geo_point_2d : ( 205310 )\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nombre d'index distincts par colonne\n",
+    "print(\">>> nombre d'index distincts par colonne :\")\n",
+    "print()\n",
+    "for column in data.columns:\n",
+    "    print(column, \": (\", len(data[column].value_counts()), \")\")\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* les colonnes les plus suceptibles de se correspondre ont un nombre d'index et des données similaires\n",
+    "* les seules assez proches dans ce cas sont **LIBELLE FRANCAIS** & **GENRE**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La colonne GENRE a déjà été supprimée\n"
+     ]
+    }
+   ],
+   "source": [
+    "# liste des LIBELLE FRANCAIS ayant plus de 1 genre\n",
+    "\n",
+    "try:\n",
+    "    sub_data = data[['LIBELLE FRANCAIS', 'GENRE']]\n",
+    "    serie = sub_data.groupby('LIBELLE FRANCAIS').GENRE.nunique() > 1\n",
+    "\n",
+    "    for index in serie.index:\n",
+    "        if serie[index]:\n",
+    "            print(\">>>\", index)\n",
+    "            #print(\">>>\", data_save.loc[data_save['LIBELLE FRANCAIS'] == index, 'GENRE'].unique())\n",
+    "            print(data_save.loc[data_save['LIBELLE FRANCAIS'] == index, 'GENRE'].value_counts())\n",
+    "            print()\n",
+    "except KeyError:\n",
+    "    print(\"La colonne GENRE a déjà été supprimée\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyse des LIBELLE FRANCAIS:\n",
+    "* Chimonanthe:\n",
+    "  * Il y a une simple confusion entre l'ESPECE (Chionanthus) et le le GENRE (Chimonanthus)\n",
+    "* Chêne:\n",
+    "  * 1 seule différence qui semble être une erreur (Sapindus)\n",
+    "* Cyprès:\n",
+    "  * les deux catégories font référence à des Cyprès bien qu'il y ait de légères différences\n",
+    "* ...\n",
+    "\n",
+    "dans l'ensemble la colonne **GENRE** n'apporte que très peu de valeur ajoutée par rapport à **LIBELLE FRANCAIS**\n",
+    "* Soit il s'agit d'erreurs \n",
+    "* Soit il n'y a qu'une seule différence qui est négligeable\n",
+    "* Soit la différence concrète entre les genres est trop subtile pour être exploitée\n",
+    "\n",
+    "**/!\\ Nous pouvons supprimer la colonne GENRE /!\\**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> suppression de la colonne GENRE\n",
+      ">>> nombre de colonnes restantes : 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# suppression des de la colonne GENRE\n",
+    "try:\n",
+    "    data = data.drop(columns=['GENRE'])\n",
+    "    print(\">>> suppression de la colonne GENRE\")\n",
+    "except KeyError:\n",
+    "    print(\">>> les colonnes ont déjà été supprimées\")\n",
+    "\n",
+    "# nombre de colonnes restantes après suppression (normalement 11)\n",
+    "print(\">>> nombre de colonnes restantes :\", len(data.columns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### 2.3.3. - Suppression des données trop peu representées"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -797,19 +961,18 @@
      "text": [
       ">>> nombre d'index distincts par colonne :\n",
       "\n",
-      "DOMANIALITE - 9\n",
-      "ARRONDISSEMENT - 25\n",
-      "LIEU / ADRESSE - 7147\n",
-      "IDEMPLACEMENT - 70426\n",
-      "LIBELLE FRANCAIS - 192\n",
-      "GENRE - 175\n",
-      "ESPECE - 540\n",
-      "CIRCONFERENCE (cm) - 510\n",
-      "HAUTEUR (m) - 147\n",
-      "STADE DE DEVELOPPEMENT - 4\n",
-      "geo_point_2d - 205310\n",
+      "DOMANIALITE : ( 9 )\n",
+      "ARRONDISSEMENT : ( 25 )\n",
+      "LIEU / ADRESSE : ( 7147 )\n",
+      "IDEMPLACEMENT : ( 70426 )\n",
+      "LIBELLE FRANCAIS : ( 192 )\n",
+      "ESPECE : ( 540 )\n",
+      "CIRCONFERENCE (cm) : ( 510 )\n",
+      "HAUTEUR (m) : ( 147 )\n",
+      "STADE DE DEVELOPPEMENT : ( 4 )\n",
+      "geo_point_2d : ( 205310 )\n",
       "\n",
-      ">>> répartition des valeurs par colonne ayant peu d'index distincts :\n",
+      ">>> répartition des valeurs par colonne ayant peu d'index distincts (< 50) :\n",
       "\n",
       "              DOMANIALITE          %\n",
       "Alignement         106412  51.827644\n",
@@ -863,13 +1026,12 @@
     "print(\">>> nombre d'index distincts par colonne :\")\n",
     "print()\n",
     "for column in data.columns:\n",
-    "    print(column, \"-\", len(data[column].value_counts()))\n",
+    "    print(column, \": (\", len(data[column].value_counts()), \")\")\n",
     "print()\n",
     "\n",
-    "# répartition des valeurs par colonne ayant peu d'index distincts\n",
-    "print(\">>> répartition des valeurs par colonne ayant peu d'index distincts :\")\n",
+    "# répartition des valeurs par colonne ayant peu d'index distincts (< 50)\n",
+    "print(\">>> répartition des valeurs par colonne ayant peu d'index distincts (< 50) :\")\n",
     "print()\n",
-    "\n",
     "\n",
     "for column in data.columns:\n",
     "    if len(data[column].value_counts()) < 50:\n",
@@ -882,6 +1044,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DOMANIALITE**\n",
+    "* **On remarque que:**\n",
+    "  * les index DAC / DASES / DFPE sont très faiblement représentés (< %1)\n",
+    "  * les index DASCO / PERIPHERIQUE / DJS sont faiblement représentés (< 5%)\n",
+    "    * total = 8%\n",
+    "  * les trois autres index sont représentés comme suit :\n",
+    "    * Alignement : 52%\n",
+    "    * Jardin : 24%\n",
+    "    * CIMETIERE :16%\n",
+    "    * total = 92% \n",
+    "* **Que faire des données ?**\n",
+    "  * Doit-on supprimer les lignes trop peu représentées ?\n",
+    "    * À partir de quel % est-ce acceptable de supprimer ? < à 1% cela semble OK\n",
+    "    * Par contre, 3% de 200k lignes = 6k lignes\n",
+    "  * Ou doit-on merger les groupes trop faiblement représentés entre-eux ? \n",
+    "    * pour DAC / DASES / DFPE / DASCO / DJS on pourrait dire que cela a potentiellement du sens car ce sont des acronymes...\n",
+    "    * Est-ce que cela a du sens pour PERIPHERIQUE ?\n",
+    "    \n",
+    ">\n",
+    "\n",
+    "**ARRONDISSEMENT**\n",
+    "* **On remarque que:** l'ensemble des index sont plutôt bien répartis\n",
+    "* **Que faire des données ?** : on les laisse telles quelles\n",
+    "\n",
+    ">\n",
+    "\n",
+    "**STADE DE DEVELOPPEMENT**\n",
+    "* **On remarque que:** l'ensemble des index sont plutôt bien répartis\n",
+    "* **Que faire des données ?** : on les laisse telles quelles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### 2.3.4. - Suppression des données anormales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -892,35 +1110,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.3. - Suppression des données anormales"
+    "## 2.4. - Compléter les données manquantes\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4. - Compléter les données manquantes"
+    "> ### 2.4.1. - Complétion de la colonne ESPECE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4.1. - Complétion de ESPECE"
+    "> ### 2.4.2. - Complétion de la colonne STADE DE DEVELOPPEMENT"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4.2. - Complétion de STADE DE DEVELOPPEMENT"
+    "## 2.5. - Revérification suite à la complétion des données \n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyser & exploiter"
+    "# 3. - Analyser & exploiter\n",
+    "---\n",
+    "---"
    ]
   }
  ],
